WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92720
Slider ticks are drawn at wrong positions
https://bugs.webkit.org/show_bug.cgi?id=92720
Summary
Slider ticks are drawn at wrong positions
Keishi Hattori
Reported
2012-07-31 00:26:33 PDT
I made a few mistakes and the slider ticks are drawn at wrong positions
Attachments
Patch
(38.36 KB, patch)
2012-07-31 00:34 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Patch
(38.41 KB, patch)
2012-07-31 05:21 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keishi Hattori
Comment 1
2012-07-31 00:34:58 PDT
Created
attachment 155453
[details]
Patch
Kent Tamura
Comment 2
2012-07-31 00:51:58 PDT
Comment on
attachment 155453
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=155453&action=review
Almost ok
> LayoutTests/platform/chromium/TestExpectations:3435 > +BUGWK92721 WIN : fast/forms/datalist/input-appearance-range-with-datalist-zoomed.html = IMAGE > +BUGWK92721 WIN : fast/forms/datalist/input-appearance-range-with-datalist.html = IMAGE
I guess SNOWLEOPARD should be specified too.
Keishi Hattori
Comment 3
2012-07-31 05:21:26 PDT
Created
attachment 155502
[details]
Patch
WebKit Review Bot
Comment 4
2012-07-31 06:53:46 PDT
Comment on
attachment 155502
[details]
Patch Clearing flags on attachment: 155502 Committed
r124198
: <
http://trac.webkit.org/changeset/124198
>
WebKit Review Bot
Comment 5
2012-07-31 06:53:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug