Slider ticks are drawn at wrong positions https://bugs.webkit.org/show_bug.cgi?id=92720

Reviewed by Kent Tamura.

Source/WebCore:

Slider tick marks for vertical sliders were drawn reversed. And the tick
mark positions were slightly off from the thumb position because of rounding.

No new tests. Covered in input-appearance-range-with-datalist.html.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paintSliderTicks):

LayoutTests:

* fast/forms/datalist/input-appearance-range-with-datalist.html: Added values to input elements so we can see if the slider thumb position matches with the tick marks.
* platform/chromium-linux/fast/forms/datalist/input-appearance-range-with-datalist-expected.png:
* platform/chromium-linux/fast/forms/datalist/input-appearance-range-with-datalist-zoomed-expected.png:
* platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-datalist-expected.png:
* platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-datalist-zoomed-expected.png:
* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/110573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124198 268f45cc-cd09-0410-ab3c-d52691b4dbfc